@@ -56,6 +56,7 @@ MODx 0.9.6.3 (rev 4188 - September 28, 2008)
 * [FS#1036] Moved Rewrite Browser Paths (strip_image_paths) in configuration so that it's editable even when Enable Resource Browser is set to 'no'.
 * [FS#665] Fixed ViewPort Javascript code errors (thanks to Antonio)
 * [FS#1027] Added 'Path to CSS file' to user configuration so that it can be overridden on a per user basis
+* [FS#821] Fixed Javascript Error using QuickEdit and IE7 (thanks to Marc [MadeMyDay])
 
 MODx 0.9.6.2 (rev 4076 - September 15, 2008)
 ====================================
